# COREX

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  NOTICE  PROJECT_INVENTORY.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  upload_corex.py  upload_corex_new.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: __init__.py  run_benchmarks.py
benchmarks/generators/: __init__.py  artifact_encoding.py  causal_chain.py  spurious_confound.py
corex/: __init__.py  pipeline.py  score.py
corex/learnable/: __init__.py  meta_scorer.py
corex/modules/: __init__.py  domain.py  intervention.py  representation.py  statistical.py
corex/utils/: __init__.py  counterfactual.py  environments.py  metrics.py  transforms.py
docs/: api_reference.md  architecture.md  modules.md  scoring.md
examples/: custom_weights.py  quickstart.py
tests/: __init__.py  test_domain.py  test_intervention.py  test_pipeline.py  test_representation.py  test_scoring.py  test_statistical.py
validation/: README.md  __init__.py
validation/vagus_nerve/: __init__.py  evaluate.py  feature_extraction.py  preprocess.py
